--- a/src/task2/task.ipynb
+++ b/src/task2/task.ipynb
@@ -35,7 +35,7 @@
     "        [transforms.ToTensor(),\n",
     "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
     "\n",
-    "    batch_size = 32\n",
+    "    batch_size = 16\n",
     "    trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
     "    trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
     "    classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
@@ -51,7 +51,8 @@
     "\n",
     "\n",
     "    ## vision transformer \n",
-    "    net = VisionTransformer(image_size=32, patch_size=2, num_layers=6, num_heads=16, hidden_dim=512, mlp_dim=2048, num_classes=len(classes))\n",
+    "    net = VisionTransformer(image_size=32, patch_size=2, num_layers=6, num_heads=16,\n",
+    "                            hidden_dim=512, mlp_dim=2048, num_classes=len(classes)).cuda()\n",
     "\n",
     "\n",
     "    ## loss and optimiser\n",
@@ -60,7 +61,7 @@
     "\n",
     "\n",
     "    ## train\n",
-    "    for epoch in range(30):  # loop over the dataset multiple times\n",
+    "    for epoch in range(25):  # loop over the dataset multiple times\n",
     "\n",
     "        running_loss = 0.0\n",
     "        for i, data in enumerate(trainloader, 0):\n",
@@ -71,8 +72,8 @@
     "            optimizer.zero_grad()\n",
     "\n",
     "            # forward + backward + optimize\n",
-    "            outputs = net(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
+    "            outputs = net(inputs.cuda())\n",
+    "            loss = criterion(outputs, labels.cuda())\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
