--- a/src/task2/task.ipynb
+++ b/src/task2/task.ipynb
@@ -120,7 +120,7 @@
     "    with torch.no_grad():\n",
     "        for data in testloader:\n",
     "            images, labels = data\n",
-    "            outputs = net(images)\n",
+    "            outputs = net(images.cuda())\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
     "            total_test += labels.size(0)\n",
     "            correct_test += (predicted == labels).sum().item()\n",
