--- a/src/task2/task.ipynb
+++ b/src/task2/task.ipynb
@@ -30,29 +30,25 @@
    "source": [
     "class MixUp:\n",
     "    def __init__(self, num_classes, alpha=0.2, method=1):\n",
-    "        \n",
     "        self.alpha = alpha\n",
     "        self.method = method\n",
     "        self.num_classes = num_classes\n",
-    "        if(self.method == 1):\n",
-    "            self.lambd = torch.distributions.Beta(self.alpha, self.alpha).sample()\n",
-    "        if(self.method == 2):\n",
-    "            self.lambd = torch.distributions.Uniform(0.1, 0.4).sample()\n",
     "\n",
     "    def __call__(self, images, labels):\n",
     "        labels = one_hot(labels, self.num_classes)\n",
     "\n",
-    "        # images\n",
-    "        images1 = torch.cat([images, images[0].unsqueeze(0)])\n",
-    "        images2 = torch.cat([images[1:], images[0].unsqueeze(0)])\n",
-    "        \n",
-    "        # labels\n",
-    "        labels1 = torch.cat([labels, labels[0].unsqueeze(0)])\n",
-    "        labels2 = torch.cat([labels[1:], labels[0].unsqueeze(0)])\n",
-    "        \n",
-    "        # Perform mixup\n",
-    "        mix_images = self.lambd * images1 + (1 - self.lambd) * images2\n",
-    "        mix_labels = self.lambd * labels1 + (1 - self.lambd) * labels2\n",
+    "        indices = torch.randperm(images.size(0))\n",
+    "\n",
+    "        images1, labels1 = images, labels\n",
+    "        images2, labels2 = images[indices], labels[indices]\n",
+    "\n",
+    "        if self.method == 1:\n",
+    "            lambd = torch.distributions.Beta(self.alpha, self.alpha).sample((images.size(0),)).to(images.device)\n",
+    "        elif self.method == 2:\n",
+    "            lambd = torch.distributions.Uniform(0.1, 0.4).sample((images.size(0),)).to(images.device)\n",
+    "\n",
+    "        mix_images = lambd.view(-1, 1, 1, 1) * images1 + (1 - lambd).view(-1, 1, 1, 1) * images2\n",
+    "        mix_labels = lambd.view(-1, 1) * labels1 + (1 - lambd).view(-1, 1) * labels2\n",
     "\n",
     "        return mix_images, mix_labels"
    ]
@@ -201,7 +197,7 @@
     "    print('result.png saved.')\n",
     "    \n",
     "    torch.save(net.state_dict(), save_filename)\n",
-    "    print('Model saved.')\n",
+    "    print(f\"Model {sampling_method} saved.\")\n",
     "    \n",
     "#do smapling method 1\n",
     "train_and_evaluate(trainloader, testloader, 20, 'saved_model_sampling_method1.pt', 1)\n",
