--- a/src/task2/task.ipynb
+++ b/src/task2/task.ipynb
@@ -36,16 +36,17 @@
     "\n",
     "    def __call__(self, images, labels):\n",
     "        labels = one_hot(labels, self.num_classes)\n",
-    "\n",
-    "        indices = torch.randperm(images.size(0))\n",
-    "\n",
-    "        images1, labels1 = images, labels\n",
-    "        images2, labels2 = images[indices], labels[indices]\n",
-    "\n",
+    "        \n",
     "        if self.method == 1:\n",
     "            lambd = torch.distributions.Beta(self.alpha, self.alpha).sample((images.size(0),)).to(images.device)\n",
     "        elif self.method == 2:\n",
     "            lambd = torch.distributions.Uniform(0.1, 0.4).sample((images.size(0),)).to(images.device)\n",
+    "\n",
+    "        #mixing random images\n",
+    "        indices = torch.randperm(images.size(0))\n",
+    "\n",
+    "        images1, labels1 = images, labels\n",
+    "        images2, labels2 = images[indices], labels[indices]\n",
     "\n",
     "        mix_images = lambd.view(-1, 1, 1, 1) * images1 + (1 - lambd).view(-1, 1, 1, 1) * images2\n",
     "        mix_labels = lambd.view(-1, 1) * labels1 + (1 - lambd).view(-1, 1) * labels2\n",
@@ -71,7 +72,7 @@
     "    [transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
     "\n",
-    "batch_size = 16\n",
+    "batch_size = 32\n",
     "\n",
     "#training set\n",
     "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
@@ -96,7 +97,138 @@
     "im = Image.fromarray((torch.cat(images.split(1,0),3).squeeze()/2*255+.5*255).permute(1,2,0).numpy().astype('uint8'))\n",
     "im.save(\"mixup.jpg\")\n",
     "print('mixup.jpg saved.')\n",
-    "print('Ground truth labels:' + ' '.join('%5s' % classes[labels[j]] for j in range(batch_size)))\n",
+    "class_indices = labels.argmax(dim=1)\n",
+    "print('Ground truth labels:' + ' '.join('%5s' % classes[class_indices[j]] for j in range(batch_size)))\n",
+    "\n",
+    "def train_and_evaluate(trainloader, testloader, num_epochs, save_filename, sampling_method):\n",
+    "    ## vision transformer \n",
+    "    net = VisionTransformer(image_size=32, patch_size=2, num_layers=6, num_heads=16,\n",
+    "                            hidden_dim=512, mlp_dim=2048, num_classes=len(classes)).cuda()\n",
+    "\n",
+    "    ## loss and optimiser\n",
+    "    criterion = torch.nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "    mixUp = MixUp(num_classes=len(classes),alpha=0.2,method=sampling_method)\n",
+    "    results_train = []\n",
+    "    results_test = []\n",
+    "    ## train\n",
+    "    for epoch in range(num_epochs):  # loop over the dataset multiple times\n",
+    "        correct_train = 0\n",
+    "        total_train = 0\n",
+    "        running_loss = 0.0\n",
+    "        print('Epoch {}'.format(epoch+1))\n",
+    "        net.train()\n",
+    "        for i, data in enumerate(trainloader, 0):\n",
+    "\n",
+    "            images, labels = data\n",
+    "            images, labels = mixUp(images, labels)\n",
+    "\n",
+    "            # zero the parameter gradients\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # forward + backward + optimize\n",
+    "            with autocast():\n",
+    "                outputs = net(images.cuda())\n",
+    "                #compute accuracy\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total_train += labels.size(0)\n",
+    "                # Convert one-hot encoded labels to class indices\n",
+    "                labels_indices = labels.argmax(dim=1).cuda()\n",
+    "\n",
+    "                correct_train += (predicted == labels_indices).sum().item()\n",
+    "                loss = criterion(outputs, labels_indices)\n",
+    "            \n",
+    "            scaler.scale(loss).backward()\n",
+    "            scaler.step(optimizer)  # Call scaler.step() instead of optimizer.step()\n",
+    "            scaler.update()  # Update the scaler\n",
+    "\n",
+    "            # print statistics\n",
+    "            running_loss += loss.item()\n",
+    "            if i % 200 == 199:    # print every 200 mini-batches\n",
+    "                print('[%d, %5d] loss: %.3f' %\n",
+    "                    (epoch + 1, i + 1, running_loss / 2000))\n",
+    "                running_loss = 0.0\n",
+    "                \n",
+    "        print('Training done.')\n",
+    "        train_accuracy = 100 * correct_train / total_train\n",
+    "        print('Epoch {}, Training accuracy: {}%'.format(epoch+1, train_accuracy))\n",
+    "        results_train.append(train_accuracy)        \n",
+    "        # evaluation on test\n",
+    "        net.eval()\n",
+    "        correct_test = 0\n",
+    "        total_test = 0\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for data in testloader:\n",
+    "                images, labels = data\n",
+    "                outputs = net(images.cuda())\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total_test += labels.size(0)\n",
+    "                # Convert one-hot encoded labels to class indices\n",
+    "                labels_indices = labels.argmax(dim=1).cuda()\n",
+    "                correct_test += (predicted == labels_indices).sum().item()\n",
+    "\n",
+    "        test_accuracy = 100 * correct_test / total_test\n",
+    "        print('Epoch {}, Testing accuracy: {}%'.format(epoch+1, test_accuracy))\n",
+    "        results_test.append(test_accuracy)    # save trained model\n",
+    "    \n",
+    "    # After training, plot the accuracies\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(range(1, num_epochs+1), results_train, label='Train')\n",
+    "    plt.plot(range(1, num_epochs+1), results_test, label='Test')\n",
+    "    plt.title('Accuracy vs. Epoch sampling method '+ str(sampling_method) )\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend()\n",
+    "    plt.savefig('Accuracy_vs_Epoch_metod_'+ str(sampling_method)+ '.png')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Get some random test images\n",
+    "    dataiter = iter(testloader)\n",
+    "    images, labels = dataiter.next()\n",
+    "\n",
+    "    # Get predictions for these images\n",
+    "    outputs = net(images.cuda())\n",
+    "    _, predicted = torch.max(outputs.data, 1)\n",
+    "\n",
+    "    # Prepare the figure\n",
+    "    fig = plt.figure(figsize=(10, 10))\n",
+    "\n",
+    "    # For each image in the batch\n",
+    "    for i in range(36):\n",
+    "        ax = fig.add_subplot(6, 6, i+1, xticks=[], yticks=[])\n",
+    "        imshow(images[i])\n",
+    "        ax.set_title(f\"GT:{classes[labels[i]]}\\nPred:{classes[predicted[i]]}\", color=(\"green\" if predicted[i]==labels[i] else \"red\"))\n",
+    "\n",
+    "    # Save the figure\n",
+    "    plt.savefig(f\"result_{sampling_method}.png\")\n",
+    "    print('result.png saved.')\n",
+    "    \n",
+    "    torch.save(net.state_dict(), save_filename)\n",
+    "    print(f\"Model {sampling_method} saved.\")\n",
+    "    \n",
+    "#do smapling method 1\n",
+    "train_and_evaluate(trainloader, testloader, 20, 'saved_model_sampling_method1.pt', 1)\n",
+    "\n",
+    "#do sampling method 2\n",
+    "train_and_evaluate(trainloader, testloader, 20, 'saved_model_sampling_method1.pt', 2)\n",
+    "\n",
+    "\n",
+    "def imshow(img):\n",
+    "    img = img / 2 + 0.5  # Unnormalize\n",
+    "    npimg = img.numpy()\n",
+    "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "    plt.axis('off')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels[j]] for j in range(batch_size)))\n",
     "\n",
     "\n",
     "def train_and_evaluate(trainloader, testloader, num_epochs, save_filename, sampling_method):\n",
