updated .py files

--- a/src/task3/task.ipynb
+++ b/src/task3/task.ipynb
@@ -103,19 +103,45 @@
     "batch_size = 36\n",
     "\n",
     "#dataset\n",
+    "# trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+    "# testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+    "# full_dataset = torch.utils.data.ConcatDataset([trainset, testset])\n",
+    "\n",
+    "#do subset \n",
+    "from torch.utils.data import Subset\n",
+    "# Define the datasets\n",
     "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
     "testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
-    "full_dataset = torch.utils.data.ConcatDataset([trainset, testset])\n",
+    "\n",
+    "# Get the number of samples in the train and test sets\n",
+    "num_train_samples = len(trainset)\n",
+    "num_test_samples = len(testset)\n",
+    "\n",
+    "# Calculate the indices for the quarter of the datasets\n",
+    "train_indices = torch.randperm(num_train_samples)[:num_train_samples//6]\n",
+    "test_indices = torch.randperm(num_test_samples)[:num_test_samples//6]\n",
+    "\n",
+    "# Create subsets\n",
+    "trainset_subset = Subset(trainset, train_indices)\n",
+    "testset_subset = Subset(testset, test_indices)\n",
+    "\n",
+    "# Concatenate the subsets\n",
+    "full_dataset_subset = torch.utils.data.ConcatDataset([trainset_subset, testset_subset])\n",
     "\n",
     "#split\n",
     "#80/20 dev to test\n",
-    "dev_size = int(0.8 * len(full_dataset))\n",
-    "test_size = len(full_dataset) - dev_size\n",
-    "development_set, holdout_test_set  = torch.utils.data.random_split(full_dataset, [dev_size, test_size])\n",
+    "dev_size = int(0.8 * len(full_dataset_subset))\n",
+    "test_size = len(full_dataset_subset) - dev_size\n",
+    "development_set, holdout_test_set  = torch.utils.data.random_split(full_dataset_subset, [dev_size, test_size])\n",
     "#90/10 train/ test of dev set\n",
     "dev_train_size = int(0.9 * len(development_set))\n",
     "dev_test_size = len(development_set) - dev_train_size\n",
     "development_train_set, development_test_set  = torch.utils.data.random_split(development_set, [dev_test_size, dev_train_size])\n",
+    "print(len(full_dataset_subset))\n",
+    "print(len(development_set))\n",
+    "print(len(development_train_set))\n",
+    "print(len(development_test_set))\n",
+    "print(len(holdout_test_set))\n",
     "\n",
     "#dataloaders\n",
     "trainloader = torch.utils.data.DataLoader(development_train_set, batch_size=batch_size, shuffle=True, num_workers=2)\n",
@@ -165,7 +191,7 @@
     "                #calculate extra metrics\n",
     "                all_labels_train.extend(labels_indices.tolist())\n",
     "                all_predictions_train.extend(predicted.tolist())\n",
-    "                precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_train), torch.tensor(all_predictions_train))\n",
+    "                precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_train), torch.tensor(all_predictions_train), classes)\n",
     "                #calculate accuracy\n",
     "                correct_train += (predicted == labels_indices).sum().item()\n",
     "                #calculate loss\n",
@@ -210,14 +236,14 @@
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total_val += labels.size(0)\n",
     "                correct_val += (predicted == labels.to(device)).sum().item()\n",
-    "                                #calculate extra metrics\n",
+    "                #collect labels and predictions\n",
     "                all_labels_val.extend(labels.to(device).tolist())\n",
     "                all_predictions_val.extend(predicted.tolist())\n",
-    "                precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_val), torch.tensor(all_predictions_val))\n",
     "\n",
     "        val_accuracy = 100 * correct_val / total_val\n",
     "        print('Epoch {}, Validation accuracy: {}%'.format(epoch+1, val_accuracy))\n",
     "        results_validation.append(val_accuracy)    # accuracy on validation set\n",
+    "        precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_val), torch.tensor(all_predictions_val), classes)\n",
     "        for i, class_name in enumerate(classes):\n",
     "            print(f\"Class: {class_name}\")\n",
     "            print(f\"Precision: {precision[i]}\")\n",
@@ -241,14 +267,14 @@
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total_test += labels.size(0)\n",
     "                correct_test += (predicted == labels.to(device)).sum().item()\n",
-    "                                #calculate extra metrics\n",
+    "                #collect labels and predictions\n",
     "                all_labels_test.extend(labels.to(device).tolist())\n",
     "                all_predictions_test.extend(predicted.tolist())\n",
-    "                precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_test), torch.tensor(all_predictions_test))\n",
     "\n",
     "        test_accuracy = 100 * correct_test / total_test\n",
     "        print('Epoch {}, Testing accuracy: {}%'.format(epoch+1, val_accuracy))\n",
     "        results_test.append(test_accuracy)    # accuracy on validation set\n",
+    "        precision, recall, f1_score, true_positives = calculate_metrics(torch.tensor(all_labels_test), torch.tensor(all_predictions_test), classes)\n",
     "        for i, class_name in enumerate(classes):\n",
     "            print(f\"Class: {class_name}\")\n",
     "            print(f\"Precision: {precision[i]}\")\n",
@@ -276,7 +302,7 @@
     "train_and_evaluate(trainloader, validationloader, holdoutloader, 1, classes, 'saved_model_sampling_method1_task3.pt', 1)\n",
     "\n",
     "#do sampling method 2\n",
-    "train_and_evaluate(trainloader, validationloader, holdoutloader,  1, classes, 'saved_model_sampling_method2_task3.pt', 2)\n"
+    "train_and_evaluate(trainloader, validationloader, holdoutloader,  1, classes, 'saved_model_sampling_method2_task3.pt', 2)"
    ]
   }
  ],
